# vngineer

./: Cargo.toml  README.md  justfile
engine/: Cargo.toml
engine/src/: grammar.pest  lib.rs  library.rs  parser.rs  script.rs  vm.rs
resources/: main.vns  screens.simp
runner/: Cargo.toml
runner/src/: game_state.rs  main.rs
simpleton/: Cargo.toml
simpleton/src/: lib.rs
