[package]
name = "vngineer"
version = "1.0.2"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Visual Novel game engine"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/vngineer"
repository = "https://github.com/PsichiX/vngineer"
documentation = "https://docs.rs/vngineer"
readme = "../README.md"

[dependencies]
vngineer-core = { version = "1.0", path = "../engine", features = ["plugins"] }
vngineer-simpleton = { version = "1.0", path = "../simpleton" }
intuicio-essentials = "0.12"
tetra = { version = "0.8", features = ["sdl2_bundled"] }
clap = { version = "4", features = ["derive"] }
easer = "0.3"

[dependencies.intuicio-frontend-simpleton]
version = "0.12"
default-features = false
features = ["console", "fs", "plugins"]
